--- a/_config.yml
+++ b/_config.yml
@@ -14,16 +14,16 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: low-earth-orbit # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: From the skys to your screen # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A site of my ideas, projects, and musings.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "low-earth-0rbit.github.io"
 
 github:
   username: github_username # change to your github username
@@ -67,20 +67,22 @@ goatcounter:
 #     dark   - Use the dark color scheme
 #
 theme_mode: # [light | dark]
+# theme_mode: dark
+
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn:
+img_cdn: 
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/img/leo-logo.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: assets/img/leo-logo-stellar.png
 
 # boolean type, the global switch for TOC in posts.
 toc: true
